--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1692.0",
     "chess.js": "^1.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
